# TitanticML_githubaction_jenkins

./: .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
notebook/: experimental.ipynb
src/api/: auth.py  routes.py
src/core/: config.py  security.py
src/exceptions/: custom_exception.py
src/logger/: custom_logger.py
src/preprocessing/: preprocess.py
src/schemas/: request_schema.py  response_schema.py
src/services/: model_service.py
tests/: conftest.py  test_auth.py
